deploy/k8s/overlays/local/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-web-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 768Mi
